Menu wrap fix

--- a/src/components/Layout/Sidebar/Sidebar.module.scss
+++ b/src/components/Layout/Sidebar/Sidebar.module.scss
@@ -51,3 +51,7 @@
 .nav ul {
    padding: 10px 0;
 }
+
+.nav ul li {
+   white-space: nowrap;
+}
